# nlp_101

./: .gitignore  README.md
source/: CMakeLists.txt  cxx_flag_overrides.cmake
source/3rdPartyLibs/include/boost/dll/: shared_library.hpp
source/3rdPartyLibs/include/boost/interprocess/detail/: os_file_functions.hpp  win32_api.hpp
source/3rdPartyLibs/include/boost/interprocess/sync/: file_lock.hpp
source/3rdPartyLibs/include/boost/iostreams/detail/config/: fpos.hpp
source/3rdPartyLibs/include/boost/lockfree/: spsc_queue.hpp
source/3rdPartyLibs/include/boost/process/detail/windows/: search_path.hpp
source/3rdPartyLibs/include/boost/spirit/home/qi/action/: action.hpp
source/3rdPartyLibs/include/boost/spirit/home/qi/detail/: assign_to.hpp  attributes.hpp
source/3rdPartyLibs/include/boost/spirit/home/qi/numeric/detail/: numeric_utils.hpp  real_impl.hpp
source/3rdPartyLibs/include/boost/spirit/home/support/: utf8.hpp
source/3rdPartyLibs/include/boost/spirit/home/support/char_encoding/: iso8859_1.hpp
source/3rdPartyLibs/include/boost/spirit/repository/home/qi/primitive/: flush_multi_pass.hpp
source/3rdPartyLibs/lib/win/Debug/: libboost_system-vc141-mt-gd-x64-1_67.lib
source/3rdPartyLibs/lib/win/Release/: gtest.lib  libboost_filesystem-vc141-mt-x64-1_67.lib  libboost_system-vc141-mt-x64-1_67.lib
source/app/: CMakeLists.txt  main.cpp
source/app/nlp/: filter.cpp  filter.hpp  grammar.cpp  grammar.hpp
source/test/: CMakeLists.txt  convenience.hpp  environment.cpp  environment.hpp  main.cpp
source/test/tests/: console.cpp
